@@ -213,11 +213,12 @@ enum EventCleaningCuts
   ECut_GRL      = 1 << 0,
   ECut_TTC      = 1 << 1,
   ECut_LarErr   = 1 << 2,
-  ECut_GoodVtx  = 1 << 3,
-  ECut_HotSpot  = 1 << 4,
-  ECut_BadJet   = 1 << 5,
-  ECut_BadMuon  = 1 << 6,
-  ECut_Cosmic   = 1 << 7
+  ECut_TileErr  = 1 << 3,
+  ECut_GoodVtx  = 1 << 4,
+  ECut_HotSpot  = 1 << 5,
+  ECut_BadJet   = 1 << 6,
+  ECut_BadMuon  = 1 << 7,
+  ECut_Cosmic   = 1 << 8
 };
 
 // Way to check Event Types
